--- a/gindex.html
+++ b/gindex.html
@@ -227,6 +227,7 @@
     <div class="tabs">
       <div class="tab active">All</div>
       <div class="tab">OFFERS</div>
+      <a href="offer.html">
     </div>
 
     <div class="grid" id="categoryGrid">
@@ -280,7 +281,7 @@
           grid.innerHTML = `
             <div class="no-categories">
               <p>No categories available.</p>
-              <p>Add items in <a href="adminportal.html">Admin Portal</a></p>
+              <p>Visite later <a href="index.html">Admin Portal</a></p>
             </div>`;
         }
       } catch {
