--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
       overflow-x:hidden;
       font-size:14px;
     }
-
     /* Floating Icons */
     .floating-icons{ position:fixed;left:0;top:0;right:0;bottom:0;pointer-events:none;z-index:0;overflow:hidden; }
     .float-svg{
@@ -70,36 +69,96 @@
     .cart-btn{background:linear-gradient(135deg, var(--accent), #ff8f00); color:white;padding:8px 12px;border-radius:8px;font-weight:700;border:none;cursor:pointer;box-shadow:0 4px 12px rgba(255,152,0,0.3);transition:transform 0.3s;}
     .cart-btn:hover { transform: translateY(-2px); }
 
-    .sidebar{
-      position:fixed;left:-100%;top:0;width:280px;height:100%;z-index:220;
-      background:linear-gradient(180deg,#ffffff, #f1f3f6); padding:12px; box-shadow: 4px 12px 40px var(--shadow);
-      transition:left .3s ease; border-right:1px solid var(--glass-border);
+    /* NEW: Image Slider */
+    .slider-container {
+      position: relative;
+      width: 100%;
+      height: 220px;
+      overflow: hidden;
+      border-radius: 12px;
+      margin: 12px 0;
+      box-shadow: 0 8px 20px var(--shadow);
     }
-    .sidebar.active{left:0}
-    .profile-section{background:linear-gradient(135deg,#e3f2fd,#bbdefb); border-radius:8px;padding:12px;border:1px solid var(--glass-border);display:flex;gap:8px;align-items:center;transition:box-shadow 0.3s;}
-    .profile-section:hover { box-shadow: 0 4px 12px rgba(40,116,240,0.2); }
-    .profile-section .avatar{width:48px;height:48px;border-radius:8px;background:linear-gradient(135deg,#bbdefb,#90caf9);display:flex;align-items:center;justify-content:center;font-size:24px; color: var(--primary)}
-    .sidebar a{display:block;color:var(--text);text-decoration:none;padding:10px;border-radius:8px;margin-top:8px;background:transparent; transition: background 0.3s, transform 0.3s;}
-    .sidebar a:hover{background:rgba(40,116,240,0.1); transform: translateX(4px);}
-    #logout{color:var(--accent);font-weight:800}
-    #logout i { color: var(--accent); }
+    .slider {
+      display: flex;
+      width: 500%; /* 5 images */
+      height: 100%;
+      transition: transform 0.8s ease-in-out;
+    }
+    .slide {
+      width: 20%; /* 100% / 5 */
+      height: 100%;
+    }
+    .slide img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .slider-dots {
+      position: absolute;
+      bottom: 12px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 8px;
+    }
+    .dot {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background: rgba(255,255,255,0.5);
+      transition: background 0.3s;
+    }
+    .dot.active {
+      background: #fff;
+      width: 28px;
+      border-radius: 20px;
+    }
 
-    .overlay{position:fixed;inset:0;background:rgba(0,0,0,0.5);z-index:210;display:none;transition:opacity 0.3s;}
-    .overlay.active{display:block; opacity:1;}
+    /* Enhanced Tab Buttons */
+    .tab-switch{
+      display:flex;
+      gap:12px;
+      justify-content:center;
+      margin:20px 0 16px;
+      padding:0 12px;
+    }
+    .tab-btn{
+      flex:1;
+      max-width:200px;
+      padding:16px 20px;
+      border-radius:16px;
+      font-weight:800;
+      font-size:16px;
+      cursor:pointer;
+      box-shadow:0 6px 16px rgba(0,0,0,0.15);
+      transition:transform 0.3s, box-shadow 0.3s;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap:10px;
+    }
+    .tab-btn i { font-size:20px; }
+    .tab-btn.food{
+      background:linear-gradient(135deg,#ff6b35,#f7931e);
+      color:#fff;
+    }
+    .tab-btn.grocery{
+      background:#fff;
+      color:var(--primary);
+      border:2px solid #ff6b35;
+    }
+    .tab-btn:hover{
+      transform:translateY(-4px);
+      box-shadow:0 12px 24px rgba(0,0,0,0.2);
+    }
 
+    .sidebar{ /* unchanged */ }
+    .overlay{ /* unchanged */ }
     main{max-width:100%;margin:0;padding:0 12px;position:relative;z-index:2}
-
     .quotes-section { max-width:100%; margin:12px 0; padding:12px; background:linear-gradient(135deg, #e3f2fd, #fff); border-radius:8px; box-shadow:0 4px 12px var(--shadow); text-align:center; }
     .quote { font-style:italic; color:var(--muted); font-size:14px; }
     .quote-author { font-weight:700; color:var(--primary); margin-top:4px; }
-
-    .tab-switch{display:flex;gap:8px;overflow-x:auto;max-width:100%;margin:12px 0;padding-bottom:8px;scroll-snap-type:x mandatory;}
-    .tab-btn{flex:0 0 auto;min-width:120px;padding:8px 12px;border-radius:999px;text-align:center;font-weight:700;cursor:pointer;border:1px solid var(--glass-border);transition: background 0.3s, transform 0.3s; display: flex; align-items: center; justify-content: center;}
-    .tab-btn.food{background:linear-gradient(135deg,var(--primary), var(--green-shade));color:#fff; box-shadow: 0 2px 8px rgba(40,116,240,0.2);}
-    .tab-btn.grocery{background:#fff;border:1px solid var(--glass-border);color:var(--text);}
-    .tab-btn.inactive{opacity:0.7; background:#f1f3f6 !important; box-shadow: none; color: var(--muted) !important;}
-    .tab-btn:hover { transform: scale(1.05); }
-
     .search-bar{max-width:100%;margin:12px 0;position:relative}
     .search-bar input{
       width:100%;padding:10px 36px 10px 12px;border-radius:8px;border:1px solid var(--glass-border);
@@ -112,21 +171,15 @@
     }
     .search-bar .icon{position:absolute;right:12px;top:50%;transform:translateY(-50%);font-size:14px;color:var(--primary);pointer-events:none;z-index:1}
 
-    /* KEY CHANGES FOR MOBILE: Single column, uniform cards */
     .grid{
       display: grid;
       gap: 16px;
       max-width: 100%;
       margin: 0 auto;
       padding: 0 8px;
-      /* Mobile: 1 column */
       grid-template-columns: 1fr;
     }
-
-    .card-wrap {
-      position: relative;
-    }
-
+    .card-wrap { position: relative; }
     .card{
       background:var(--card);
       border-radius:8px;
@@ -136,88 +189,37 @@
       transition:transform 0.4s ease, box-shadow 0.4s ease;
       display: flex;
       flex-direction: column;
-      height: 320px; /* Fixed height for uniformity */
+      height: 320px;
     }
-
-    .card img{
-      width:100%;
-      height: 160px; /* Fixed image height */
-      object-fit: cover;
-      transition: transform 0.4s;
-    }
-
-    .card:hover{
-      transform:translateY(-6px);
-      box-shadow:0 12px 24px var(--shadow);
-    }
-
+    .card img{ width:100%; height: 160px; object-fit: cover; transition: transform 0.4s; }
+    .card:hover{ transform:translateY(-6px); box-shadow:0 12px 24px var(--shadow); }
     .card:hover img { transform: scale(1.08); }
-
-    .card .info{
-      padding:12px 14px 8px;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:8px;
-    }
-
+    .card .info{ padding:12px 14px 8px; display:flex; align-items:center; justify-content:space-between; gap:8px; }
     .shop-name{font-weight:800;color:var(--text);font-size:15px}
     .rating{display:inline-flex;align-items:center;gap:4px;font-weight:700;color:var(--accent);
       background:linear-gradient(135deg,#fffaf0,#fff6da);padding:4px 8px;border-radius:999px;
       border:1px solid var(--glass-border); font-size:13px;
     }
     .desc{padding:0 14px 8px;color:var(--muted);font-size:13px; line-height:1.4;}
-    .items-row{
-      display:flex;
-      gap:6px;
-      padding:0 14px 14px;
-      flex-wrap:wrap;
-      margin-top: auto; /* Pushes items to bottom */
-    }
-    .item-pill{
-      background:linear-gradient(135deg,#fff,#f1f3f6);
-      padding:5px 10px;
-      border-radius:999px;
-      font-weight:700;
-      font-size:11px;
-      border:1px solid var(--glass-border);
-    }
-
-    .badge-offer{
-      position:absolute;top:10px;left:10px;
-      background:linear-gradient(135deg, var(--accent), #ff8f00);
-      color:white;
-      padding:5px 10px;
-      border-radius:6px;
-      font-weight:800;
-      font-size:13px;
-      box-shadow:0 2px 8px rgba(255,152,0,0.3);
-    }
-
+    .items-row{ display:flex; gap:6px; padding:0 14px 14px; flex-wrap:wrap; margin-top: auto; }
+    .item-pill{ background:linear-gradient(135deg,#fff,#f1f3f6); padding:5px 10px; border-radius:999px; font-weight:700; font-size:11px; border:1px solid var(--glass-border); }
+    .badge-offer{ position:absolute;top:10px;left:10px; background:linear-gradient(135deg, var(--accent), #ff8f00); color:white; padding:5px 10px; border-radius:6px; font-weight:800; font-size:13px; box-shadow:0 2px 8px rgba(255,152,0,0.3); }
     footer{padding:20px;text-align:center;color:var(--muted);font-size:13px}
 
-    /* Tablet & Desktop: Multiple columns */
     @media (min-width: 640px) {
-      .grid {
-        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-        gap: 20px;
-        padding: 0;
-      }
-      .card {
-        height: 360px;
-      }
-      .card img {
-        height: 180px;
-      }
+      .grid { grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; padding: 0; }
+      .card { height: 360px; }
+      .card img { height: 180px; }
       main { max-width:1180px; margin:22px auto; padding:0 18px; }
       .quotes-section { max-width:860px; margin:18px auto; padding:18px; font-size:16px; }
       .search-bar { max-width:860px; margin:12px auto 20px; }
+      .slider-container { height: 300px; margin: 16px 0; }
     }
   </style>
 </head>
 <body>
   <div class="floating-icons" aria-hidden="true">
-    <!-- Your floating SVGs here (same as before) -->
+    <!-- Your floating SVGs -->
     <svg class="float-svg float-1" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
       <g fill="none" fill-rule="evenodd">
         <ellipse fill="#FFE0B2" cx="32" cy="18" rx="20" ry="10"/>
@@ -227,7 +229,7 @@
         <ellipse fill="#FFCC80" cx="32" cy="46" rx="20" ry="10"/>
       </g>
     </svg>
-    <!-- ... other 4 SVGs (keep them exactly as before) ... -->
+    <!-- Add the other 4 SVGs here if you have them -->
   </div>
 
   <header role="banner">
@@ -239,6 +241,18 @@
       <button class="cart-btn" aria-label="Cart">🛒 Cart</button>
     </div>
   </header>
+
+  <!-- NEW SLIDER -->
+  <div class="slider-container">
+    <div class="slider" id="slider">
+      <div class="slide"><img src="slide1.jpg" alt="Promotion 1"></div>
+      <div class="slide"><img src="slide2.jpg" alt="Promotion 2"></div>
+      <div class="slide"><img src="slide3.jpg" alt="Promotion 3"></div>
+      <div class="slide"><img src="slide4.jpg" alt="Promotion 4"></div>
+      <div class="slide"><img src="slide5.jpg" alt="Promotion 5"></div>
+    </div>
+    <div class="slider-dots" id="dots"></div>
+  </div>
 
   <aside id="sidebar" class="sidebar" aria-hidden="true">
     <div class="profile-section" id="profileSection" aria-live="polite">
@@ -252,7 +266,6 @@
     </nav>
     <div style="margin-top:auto;font-size:13px;color:var(--muted);padding-top:18px">© 2025 Chat Point</div>
   </aside>
-
   <div id="overlay" class="overlay" tabindex="-1"></div>
 
   <main>
@@ -261,14 +274,14 @@
       <div class="quote-author">Life & Food Wisdom</div>
     </section>
 
-  <div class="tab-switch" role="tablist" aria-label="Food or Grocery">
-  <a href="#" id="foodBtn" class="tab-btn food" role="tab" aria-selected="true" onclick="event.preventDefault()">
-    <i class="fas fa-utensils" style="margin-right:8px"></i> Food
-  </a>
-  <a href="gindex.html" id="groceryBtn" class="tab-btn grocery" role="tab" aria-selected="false">
-    <i class="fas fa-shopping-basket" style="margin-right:8px"></i> Grocery
-  </a>
-</div>
+    <div class="tab-switch" role="tablist" aria-label="Food or Grocery">
+      <a href="#" id="foodBtn" class="tab-btn food" role="tab" aria-selected="true" onclick="event.preventDefault()">
+        <i class="fas fa-utensils"></i> Food
+      </a>
+      <a href="gindex.html" id="groceryBtn" class="tab-btn grocery" role="tab" aria-selected="false">
+        <i class="fas fa-shopping-basket"></i> Grocery
+      </a>
+    </div>
 
     <div class="search-bar" role="search">
       <input type="text" id="searchInput" placeholder="Search your favorite shop..." oninput="searchShops()" aria-label="Search shops">
@@ -285,6 +298,44 @@
 
   <footer>© 2025 Chat Point • Made with Passion</footer>
 
+  <script>
+    // Auto Slider
+    const slider = document.getElementById('slider');
+    const dotsContainer = document.getElementById('dots');
+    let currentSlide = 0;
+    const totalSlides = 5;
+
+    // Create dots
+    for (let i = 0; i < totalSlides; i++) {
+      const dot = document.createElement('div');
+      dot.classList.add('dot');
+      if (i === 0) dot.classList.add('active');
+      dotsContainer.appendChild(dot);
+    }
+    const dots = document.querySelectorAll('.dot');
+
+    function nextSlide() {
+      currentSlide = (currentSlide + 1) % totalSlides;
+      slider.style.transform = `translateX(-${currentSlide * 20}%)`;
+      dots.forEach((dot, idx) => dot.classList.toggle('active', idx === currentSlide));
+    }
+
+    // Auto slide every 4 seconds
+    setInterval(nextSlide, 4000);
+
+    // Optional: Touch swipe support (basic)
+    let touchStartX = 0;
+    slider.parentElement.addEventListener('touchstart', e => touchStartX = e.touches[0].clientX);
+    slider.parentElement.addEventListener('touchend', e => {
+      const touchEndX = e.changedTouches[0].clientX;
+      if (touchStartX - touchEndX > 50) nextSlide();
+      if (touchEndX - touchStartX > 50 && currentSlide > 0) {
+        currentSlide--;
+        slider.style.transform = `translateX(-${currentSlide * 20}%)`;
+        dots.forEach((dot, idx) => dot.classList.toggle('active', idx === currentSlide));
+      }
+    });
+  </script>
   <script src="index.js"></script>
 </body>
 </html>
