--- a/index.html
+++ b/index.html
@@ -86,12 +86,47 @@
     .quotes-section { max-width:100%; margin:12px 0; padding:12px; background:linear-gradient(135deg, #e3f2fd, #fff); border-radius:8px; box-shadow:0 4px 12px var(--shadow); text-align:center; }
     .quote { font-style:italic; color:var(--muted); font-size:14px; }
     .quote-author { font-weight:700; color:var(--primary); margin-top:4px; }
-    .tab-switch{display:flex;gap:8px;overflow-x:auto;max-width:100%;margin:12px 0;padding-bottom:8px;scroll-snap-type:x mandatory;}
-    .tab-btn{flex:0 0 auto;min-width:120px;padding:8px 12px;border-radius:999px;text-align:center;font-weight:700;cursor:pointer;border:1px solid var(--glass-border);transition: background 0.3s, transform 0.3s; display: flex; align-items: center; justify-content: center;}
-    .tab-btn.food{background:linear-gradient(135deg,var(--primary), var(--green-shade));color:#fff; box-shadow: 0 2px 8px rgba(40,116,240,0.2);}
-    .tab-btn.grocery{background:#fff;border:1px solid var(--glass-border);color:var(--text);}
-    .tab-btn.inactive{opacity:0.7; background:#f1f3f6 !important; box-shadow: none; color: var(--muted) !important;}
-    .tab-btn:hover { transform: scale(1.05); }
+
+    /* === ENHANCED FOOD & GROCERY BUTTONS === */
+    .tab-switch{
+      display:flex;
+      gap:12px;
+      justify-content:center;
+      margin:20px 0 16px;
+      padding:0 12px;
+    }
+    .tab-btn{
+      flex:1;
+      max-width:220px;
+      padding:16px 20px;
+      border-radius:20px;
+      font-weight:800;
+      font-size:17px;
+      cursor:pointer;
+      box-shadow:0 6px 16px rgba(0,0,0,0.12);
+      transition:transform 0.3s, box-shadow 0.3s;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap:10px;
+    }
+    .tab-btn i{
+      font-size:22px;
+    }
+    .tab-btn.food{
+      background:linear-gradient(135deg,var(--primary), var(--green-shade));
+      color:#fff;
+    }
+    .tab-btn.grocery{
+      background:#fff;
+      border:2px solid var(--primary);
+      color:var(--primary);
+    }
+    .tab-btn:hover{
+      transform:translateY(-4px);
+      box-shadow:0 12px 24px rgba(0,0,0,0.18);
+    }
+
     .search-bar{max-width:100%;margin:12px 0;position:relative}
     .search-bar input{
       width:100%;padding:10px 36px 10px 12px;border-radius:8px;border:1px solid var(--glass-border);
@@ -103,19 +138,17 @@
       border-color: var(--primary);
     }
     .search-bar .icon{position:absolute;right:12px;top:50%;transform:translateY(-50%);font-size:14px;color:var(--primary);pointer-events:none;z-index:1}
-    /* KEY CHANGES FOR MOBILE: Single column, uniform cards */
+
+    /* Rest of your original styles unchanged */
     .grid{
       display: grid;
       gap: 16px;
       max-width: 100%;
       margin: 0 auto;
       padding: 0 8px;
-      /* Mobile: 1 column */
       grid-template-columns: 1fr;
     }
-    .card-wrap {
-      position: relative;
-    }
+    .card-wrap { position: relative; }
     .card{
       background:var(--card);
       border-radius:8px;
@@ -125,11 +158,11 @@
       transition:transform 0.4s ease, box-shadow 0.4s ease;
       display: flex;
       flex-direction: column;
-      height: 320px; /* Fixed height for uniformity */
+      height: 320px;
     }
     .card img{
       width:100%;
-      height: 160px; /* Fixed image height */
+      height: 160px;
       object-fit: cover;
       transition: transform 0.4s;
     }
@@ -156,7 +189,7 @@
       gap:6px;
       padding:0 14px 14px;
       flex-wrap:wrap;
-      margin-top: auto; /* Pushes items to bottom */
+      margin-top: auto;
     }
     .item-pill{
       background:linear-gradient(135deg,#fff,#f1f3f6);
@@ -177,19 +210,15 @@
       box-shadow:0 2px 8px rgba(255,152,0,0.3);
     }
     footer{padding:20px;text-align:center;color:var(--muted);font-size:13px}
-    /* Tablet & Desktop: Multiple columns */
+
     @media (min-width: 640px) {
       .grid {
         grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
         gap: 20px;
         padding: 0;
       }
-      .card {
-        height: 360px;
-      }
-      .card img {
-        height: 180px;
-      }
+      .card { height: 360px; }
+      .card img { height: 180px; }
       main { max-width:1180px; margin:22px auto; padding:0 18px; }
       .quotes-section { max-width:860px; margin:18px auto; padding:18px; font-size:16px; }
       .search-bar { max-width:860px; margin:12px auto 20px; }
@@ -198,7 +227,6 @@
 </head>
 <body>
   <div class="floating-icons" aria-hidden="true">
-    <!-- Your floating SVGs here (same as before) -->
     <svg class="float-svg float-1" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
       <g fill="none" fill-rule="evenodd">
         <ellipse fill="#FFE0B2" cx="32" cy="18" rx="20" ry="10"/>
@@ -208,8 +236,9 @@
         <ellipse fill="#FFCC80" cx="32" cy="46" rx="20" ry="10"/>
       </g>
     </svg>
-    <!-- ... other 4 SVGs (keep them exactly as before) ... -->
+    <!-- Add your other 4 floating SVGs here -->
   </div>
+
   <header role="banner">
     <button id="navBtn" class="nav-btn" aria-label="Open menu">
       <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M4 7h16M4 12h16M4 17h16" stroke="#fff" stroke-width="1.6" stroke-linecap="round"/></svg>
@@ -219,6 +248,7 @@
       <button class="cart-btn" aria-label="Cart">🛒 Cart</button>
     </div>
   </header>
+
   <aside id="sidebar" class="sidebar" aria-hidden="true">
     <div class="profile-section" id="profileSection" aria-live="polite">
       <div class="avatar">🙂</div>
@@ -232,30 +262,38 @@
     <div style="margin-top:auto;font-size:13px;color:var(--muted);padding-top:18px">© 2025 Chat Point</div>
   </aside>
   <div id="overlay" class="overlay" tabindex="-1"></div>
+
   <main>
     <section class="quotes-section">
       <div class="quote">"Food is symbolic of love when words are inadequate." – Alan D. Wolfelt</div>
       <div class="quote-author">Life & Food Wisdom</div>
     </section>
-  <div class="tab-switch" role="tablist" aria-label="Food or Grocery">
-  <a href="#" id="foodBtn" class="tab-btn food" role="tab" aria-selected="true" onclick="event.preventDefault()">
-    <i class="fas fa-utensils" style="margin-right:8px"></i> Food
-  </a>
-  <a href="gindex.html" id="groceryBtn" class="tab-btn grocery" role="tab" aria-selected="false">
-    <i class="fas fa-shopping-basket" style="margin-right:8px"></i> Grocery
-  </a>
-</div>
+
+    <!-- Bigger & More Attractive Food/Grocery Buttons -->
+    <div class="tab-switch" role="tablist" aria-label="Food or Grocery">
+      <a href="#" id="foodBtn" class="tab-btn food" role="tab" aria-selected="true" onclick="event.preventDefault()">
+        <i class="fas fa-utensils"></i> Food
+      </a>
+      <a href="gindex.html" id="groceryBtn" class="tab-btn grocery" role="tab" aria-selected="false">
+        <i class="fas fa-shopping-basket"></i> Grocery
+      </a>
+    </div>
+
     <div class="search-bar" role="search">
       <input type="text" id="searchInput" placeholder="Search your favorite shop..." oninput="searchShops()" aria-label="Search shops">
       <i class="fas fa-search icon"></i>
     </div>
+
     <section class="quotes-section">
       <div class="quote">"One cannot think well, love well, sleep well, if one has not dined well." – Virginia Woolf</div>
       <div class="quote-author">Inspire Your Meal</div>
     </section>
+
     <section class="grid" id="grid" aria-live="polite" aria-label="Shops list"></section>
   </main>
+
   <footer>© 2025 Chat Point • Made with Passion</footer>
+
   <script src="index.js"></script>
 </body>
 </html>
