--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <meta name="theme-color" content="#2874F0" />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  
+  <!-- === AdSense Global Script (REQUIRED - put in HEAD) === -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3035782856646159"
+     crossorigin="anonymous"></script>
+     
   <style>
     :root{
       --bg:#fad075;
@@ -36,6 +41,22 @@
       overflow-x:hidden;
       font-size:14px;
     }
+    /* === AD CONTAINER STYLES === */
+    .ad-container {
+      max-width: 100%;
+      margin: 24px auto;
+      padding: 16px 12px;
+      text-align: center;
+      background: rgba(255,255,255,0.9);
+      border-radius: 12px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+    }
+    .ad-container.top-ad { margin-top: 12px; margin-bottom: 20px; }
+    .ad-container.bottom-ad { margin-bottom: 20px; }
+    @media (min-width: 640px) {
+      .ad-container { max-width: 860px; padding: 20px; }
+    }
+    
     /* Floating Icons */
     .floating-icons{ position:fixed;left:0;top:0;right:0;bottom:0;pointer-events:none;z-index:0;overflow:hidden; }
     .float-svg{
@@ -86,7 +107,6 @@
     .quotes-section { max-width:100%; margin:12px 0; padding:12px; background:linear-gradient(135deg, #e3f2fd, #fff); border-radius:8px; box-shadow:0 4px 12px var(--shadow); text-align:center; }
     .quote { font-style:italic; color:var(--muted); font-size:14px; }
     .quote-author { font-weight:700; color:var(--primary); margin-top:4px; }
-
     /* === ENHANCED FOOD & GROCERY BUTTONS === */
     .tab-switch{
       display:flex;
@@ -126,7 +146,6 @@
       transform:translateY(-4px);
       box-shadow:0 12px 24px rgba(0,0,0,0.18);
     }
-
     .search-bar{max-width:100%;margin:12px 0;position:relative}
     .search-bar input{
       width:100%;padding:10px 36px 10px 12px;border-radius:8px;border:1px solid var(--glass-border);
@@ -138,7 +157,6 @@
       border-color: var(--primary);
     }
     .search-bar .icon{position:absolute;right:12px;top:50%;transform:translateY(-50%);font-size:14px;color:var(--primary);pointer-events:none;z-index:1}
-
     /* Rest of your original styles unchanged */
     .grid{
       display: grid;
@@ -210,7 +228,6 @@
       box-shadow:0 2px 8px rgba(255,152,0,0.3);
     }
     footer{padding:20px;text-align:center;color:var(--muted);font-size:13px}
-
     @media (min-width: 640px) {
       .grid {
         grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
@@ -238,7 +255,6 @@
     </svg>
     <!-- Add your other 4 floating SVGs here -->
   </div>
-
   <header role="banner">
     <button id="navBtn" class="nav-btn" aria-label="Open menu">
       <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M4 7h16M4 12h16M4 17h16" stroke="#fff" stroke-width="1.6" stroke-linecap="round"/></svg>
@@ -248,7 +264,20 @@
       <button class="cart-btn" aria-label="Cart">🛒 Cart</button>
     </div>
   </header>
-
+  
+  <!-- === TOP AD BANNER (High visibility after header) === -->
+  <div class="ad-container top-ad">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-format="fluid"
+         data-ad-layout-key="-6v+d0+3u-16-1l"
+         data-ad-client="ca-pub-3035782856646159"
+         data-ad-slot="5613996084"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+  
   <aside id="sidebar" class="sidebar" aria-hidden="true">
     <div class="profile-section" id="profileSection" aria-live="polite">
       <div class="avatar">🙂</div>
@@ -262,13 +291,12 @@
     <div style="margin-top:auto;font-size:13px;color:var(--muted);padding-top:18px">© 2025 Chat Point</div>
   </aside>
   <div id="overlay" class="overlay" tabindex="-1"></div>
-
+  
   <main>
     <section class="quotes-section">
       <div class="quote">"Food is symbolic of love when words are inadequate." – Alan D. Wolfelt</div>
       <div class="quote-author">Life & Food Wisdom</div>
     </section>
-
     <!-- Bigger & More Attractive Food/Grocery Buttons -->
     <div class="tab-switch" role="tablist" aria-label="Food or Grocery">
       <a href="#" id="foodBtn" class="tab-btn food" role="tab" aria-selected="true" onclick="event.preventDefault()">
@@ -278,22 +306,31 @@
         <i class="fas fa-shopping-basket"></i> Grocery
       </a>
     </div>
-
     <div class="search-bar" role="search">
       <input type="text" id="searchInput" placeholder="Search your favorite shop..." oninput="searchShops()" aria-label="Search shops">
       <i class="fas fa-search icon"></i>
     </div>
-
     <section class="quotes-section">
       <div class="quote">"One cannot think well, love well, sleep well, if one has not dined well." – Virginia Woolf</div>
       <div class="quote-author">Inspire Your Meal</div>
     </section>
-
     <section class="grid" id="grid" aria-live="polite" aria-label="Shops list"></section>
   </main>
-
+  
+  <!-- === BOTTOM AD ANCHOR (Sticky visibility) === -->
+  <div class="ad-container bottom-ad">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-format="fluid"
+         data-ad-layout-key="-6v+d0+3u-16-1l"
+         data-ad-client="ca-pub-3035782856646159"
+         data-ad-slot="5613996084"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+  
   <footer>© 2025 Chat Point • Made with Passion</footer>
-
   <script src="index.js"></script>
 </body>
 </html>
