--- a/delivery.html
+++ b/delivery.html
@@ -162,7 +162,22 @@
     const loudSound = $('#loudSound');
 
     // WhatsApp Messages
-    const welcomeMessage = encodeURIComponent(`🌟 Welcome to Chatpoint! 🌟\nThank you for choosing us! 😊\n✅ 100% safe, fast & genuine\nSpecial Offer: Order above ₹250 → FREE 1000ml bottle!\nShop now 👉 chatpoint.shop`);
+    const welcomeMessage = encodeURIComponent(`*🍛 Welcome to ChatPoint! 🍲🛒*
+
+We're super excited to have you on board at *chatpoint.shop* – your favorite food & grocery delivery in Sindagi! 😋
+
+Enjoy:
+✅ Home-style fresh meals  
+✅ Super-fast delivery  
+✅ Live tracking  
+✅ Easy UPI or Cash payment  
+✅ Exclusive offers just for you  
+
+Order now and get your hunger fixed in minutes! 🚀
+
+Need help? Just reply here – we're 24/7! ❤️
+
+Welcome to the family!`);
 
     const confirmMessage = (name) => encodeURIComponent(`Hi ${name}! 😊\nYour order on ChatPoint has been confirmed!\nWe'll prepare it soon. 🚀\nThanks for shopping with us!`);
 
